<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shoppley</string>
    <string name="hello">Hello</string>
    <string name="register_at">Register at </string>
    <string name="email_or_password_cannot_be_blank">Email or password cannot be blank</string>
    <string name="ok">OK</string>
    <string name="email">Email</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="password">Password</string>
    <string name="signing_in">Signing in...</string>
    <string name="please_check_your_network_connection">Please check your network connection</string>
    <string name="logout">Log out</string>
    <string name="no_offers">No offers</string>
    <string name="locate">Locate</string>
    <string name="get_direction">Get Direction</string>
    <string name="loading">Loading...</string>
    <string name="none">none</string>
    <string name="account_not_found">Account not found. Would you like to register?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="register">Sign up</string>
    <string name="add_recipients">Add recipients</string>
    <string name="to">To</string>
    <string name="personal_messages">Personal Messages</string>
    <string name="messages">Messages</string>
    <string name="forward_to_friends">Forward</string>
    <string name="browse">Browse</string>
    <string name="forward">Forward</string>
    <string name="successfully_forward">Successfully forwarded.</string>
    <string name="successfully_rated">Successfully rated</string>
    <string name="failed_to_rate">Failed to rate. Please try again later</string>
    <string name="phone">Phone</string>
    <string name="zipcode">Zipcode</string>
    <string name="sign_up">Sign up</string>
    <string name="unsuccessfully_forwarded">Unsuccessfully forwarded. Please try again later.</string>
    <string name="successfully_registered">Successfully registered.</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="registration_failed_please_try_again_later">Registration failed. Please try again later.</string>
    <string name="email_password_phone_zipcode_cannot_be_blank">Email or password or phone or zipcode cannot be blank.</string>
    <string name="successfully_submitted">&quot;Succesfully submitted.&quot;</string>
    <string name="unable_to_send_feedback">Unable to send feedback. Please try again later.</string>
	<string name="registering">Registering...</string>
	<string name="sending_rating_request">Sending rating request...</string>
	<string name="please_add_some_recipients_before_sending">Please add some recipients before sending.</string>
	<string name="forwarding">Forwarding...</string>
	<string name="submitting_feedback">Submitting feedback...</string>
	<string name="please_add_feedback_before_submitting">Please add feedback before submitting.</string>
	<string name="submitting_request">Submitting request...</string>
	<string name="unable_to_send_request">Unable to send request.</string>
	<string name="unable_to_logout">Unable to logout. Force logout.</string>
	<string name="logging_out">Logging out</string>
	<string name="successfully_logout">Succesfully logged out.</string>
	<string name="cancel">Cancel</string>
</resources>
