<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	android:id="@+id/forwardLayout"
	android:paddingLeft="10dip"
	android:paddingRight="10dip"
>
	<LinearLayout
		android:orientation="vertical"
		android:layout_gravity="center_vertical|center_horizontal"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingTop="10dip"
	>
		<TextView
			android:id="@+id/txtTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="TextView"
			style="@style/TextHeader2"
			android:visibility="gone"
		></TextView>
		<TextView
			android:text="@string/to"
			android:id="@+id/txtTo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
		></TextView>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/linearLayout1"
			android:orientation="vertical"
		>
			<MultiAutoCompleteTextView
				android:id="@+id/txtReceiver"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:completionThreshold="1"
				android:hint="@string/add_recipients"
				android:imeOptions="actionNext"
				android:minLines="1"
				android:maxLines="1"
				android:scrollHorizontally="true"
			>
			</MultiAutoCompleteTextView>
			<Button
				android:text="@string/browse"
				android:layout_width="wrap_content"
				android:id="@+id/btnBrowse"
				android:layout_weight="3"
				android:layout_gravity="right"
				android:layout_height="wrap_content"
			></Button>
		</LinearLayout>
		<TextView
			android:text="@string/personal_messages"
			android:id="@+id/txtMessages"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
		></TextView>
	</LinearLayout>
	<LinearLayout
		android:layout_alignParentBottom="true"
		android:layout_width="match_parent"
		android:id="@+id/linearLayout2"
		android:layout_height="wrap_content"
	>
		<EditText
			android:id="@+id/edtTxtMsg"
			android:gravity="left|top"
			android:hint="@string/messages"
			android:minLines="4"
			android:maxLines="4"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:imeOptions="actionSend"
			android:layout_weight="4"
		></EditText>
		<Button
			android:layout_weight="1"
			android:text="Send"
			android:id="@+id/btnSend"
			android:layout_width="0px"
			android:layout_height="match_parent"
		></Button>
	</LinearLayout>
</RelativeLayout>